# SystemBook

app/Data/: Process.swift
app/SystemBook/: ContentView.swift  SystemBookApp.swift
app/SystemBook.xcodeproj/: project.pbxproj
app/SystemBook/Actions/: ButtonPressActions.swift
app/SystemBook/Data/: Favorites.swift  Process.swift  ProcessListDTO.swift  SavedDataManager.swift
app/SystemBook/Data/DTO/: ProcessDTO.swift  ProcessListDTO.swift
app/SystemBook/Data/DataTransferObjects/: DataTransferObject.swift  ProcessListDTO.swift
app/SystemBook/Data/Websocket/: WebsocketManager.swift
app/SystemBook/Views/: LoadingView.swift  ProcessCardView.swift  ProcessDetailsView.swift
app/SystemBookTests/: SystemBookTests.swift  SystemBookUnitTest.swift
app/SystemBookUITests/: SystemBookUITests.swift  SystemBookUITestsLaunchTests.swift
server/: Cargo.toml  go.mod  main.go
server/collectors/: dbus_collector.go  dbus_collector_test.go
server/data/: process.go  unit.go
server/json/: builder.go
server/src/: dbus_collector.rs  main.rs  process.rs
server/src/collectors/: dbus_collector.rs  mod.rs  runtime_collector.rs
server/src/data/: list_dto.rs  mod.rs  process.rs
server/src/websocket/: mod.rs  websocket_listener.rs  websocket_server.rs
server/src/websocket/handlers/: list_handler.rs  mod.rs
server/websocket/: listener.go  websocket.go
server/websocket/listeners/: list.go  monitor.go
