[package]
name = "SystemBook"
version = "0.1.0"
edition = "2021"

[dependencies]
systemd = "0.10.0"
systemctl = "0.3.1"
dbus = "0.9.7"
serde = { version = "1.0.203", features = ["derive"] }
futures-util = "0.3.30"
tokio = { version = "1.38.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.23.1"
async-trait = "0.1.80"
serde_json = "1.0"
lazy_static = "1.5.0"
async_once = "0.2.6"
procfs = "0.16.0"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]